Configure forms to send emails only to primary recipient

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <form class="modal-form" action="https://formsubmit.co/razaabbascnc@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="New Demo Booking Request!">
-                <input type="hidden" name="_cc" value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com">
+                <!-- <input type="hidden" name="_cc" value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com"> -->
                 <input type="hidden" name="_next" value="http://localhost:8081/index.html">
                 <div class="form-group">
                     <label for="name">Full Name</label>
