--- a/pages/contact.html
+++ b/pages/contact.html
@@ -140,8 +140,8 @@
 
                     <form action="https://formsubmit.co/razaabbascnc@gmail.com" method="POST">
                         <input type="hidden" name="_subject" value="New Contact Form Submission - Bharat Robotics LAB">
-                        <input type="hidden" name="_cc"
-                            value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com">
+                        <!-- <input type="hidden" name="_cc"
+                            value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com"> -->
 
                         <div class="form-group">
                             <label for="name">Full Name *</label>
