--- a/pages/contact.html
+++ b/pages/contact.html
@@ -142,6 +142,8 @@
                         <input type="hidden" name="_subject" value="New Contact Form Submission - Bharat Robotics LAB">
                         <!-- <input type="hidden" name="_cc"
                             value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com"> -->
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_template" value="table">
 
                         <div class="form-group">
                             <label for="name">Full Name *</label>
