--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <!-- <input type="hidden" name="_cc" value="raza.bharatrobotics@gmail.com,askari.bharatrobotics@gmail.com"> -->
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="http://localhost:8081/index.html">
+                <!-- <input type="hidden" name="_next" value="http://localhost:8081/index.html"> -->
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" name="name" id="name" required placeholder="John Doe">
